--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
+    "eslint": "^3.7.1",
     "haraka-test-fixtures": "^1.0.9",
     "nodeunit": "^0.10.2"
   },
