rename connect.geoip -> geoip

--- a/config/geoip.ini
+++ b/config/geoip.ini
@@ -8,13 +8,6 @@
 ; this for distance calculations to work.
 ;public_ip=208.100.177.123
 
-; show_city: show city data in logs and headers
-;    note: city data is less accurate than country
-;show_city=true
-
-; show_region: show regional data (US states, CA provinces, etc..)
-;show_region=true
-
 ; enable distance calculations. If you don't use the distance, leave it
 ; disabled to save a few CPU cycles.
 ;calc_distance=false
@@ -24,5 +17,15 @@
 ; kilometers). A suggested use for that data is the karma plugin.
 ;too_far=4000
 
-;[asn]
-;report_as=connect.asn
+
+[show]
+
+; city: show city data in logs and headers
+;    note: city data is less accurate than country
+
+city=true
+
+; show_region: show regional data (US states, CA provinces, etc..)
+;show_region=true
+
+region=true
