--- a/config/geoip.ini
+++ b/config/geoip.ini
@@ -1,19 +1,8 @@
 
-; dbdir: the directory GeoIP DB files live in. This is only used by
-;        the maxmind geoip provider.
-;dbdir=/usr/local/share/GeoIP
-
 ; public_ip: the public IP address of *this* mail server
 ; if your mail server is not bound to a public IP, you'll have to provide
 ; this for distance calculations to work.
 ;public_ip=208.100.177.123
-
-; show_city: show city data in logs and headers
-;    note: city data is less accurate than country
-;show_city=true
-
-; show_region: show regional data (US states, CA provinces, etc..)
-;show_region=true
 
 ; enable distance calculations. If you don't use the distance, leave it
 ; disabled to save a few CPU cycles.
@@ -24,5 +13,12 @@
 ; kilometers). A suggested use for that data is the karma plugin.
 ;too_far=4000
 
-;[asn]
-;report_as=connect.asn
+
+[show]
+
+; city: show city data in logs and headers
+;    note: city data is less accurate than country
+;city=true
+
+; region: show regional data (US states, CA provinces, etc..)
+;region=true
