--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "./run_tests",
-    "lint": "eslint index.js",
+    "lint": "./node_modules/.bin/eslint index.js test/*.js",
     "coverage": "./node_modules/.bin/istanbul cover ./run_tests"
   },
   "repository": {
