--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haraka-plugin-geoip",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
@@ -30,11 +30,15 @@
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
     "eslint": "^3.7.1",
+    "eslint-plugin-haraka": "^1.0.0",
     "haraka-test-fixtures": "^1.0.9",
     "nodeunit": "^0.10.2"
   },
   "dependencies": {
     "haraka-net-utils": "^1.0.0",
     "maxmind": "^1.3.0"
+  },
+  "eslintConfig": {
+    "plugins": [ "haraka" ]
   }
 }
