--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "no-delete-var": 2,
     "no-label-var": 2,
     "no-shadow": 2,
-    "no-unused-vars": [ 1, { "args": "none" }]
+    "no-unused-vars": [ 1, { "args": "none" }],
+    "no-console": 0
   }
 }
