--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,3 +2,9 @@ engines:
   eslint:
     enabled: true
     channel: "eslint-3"
+    config:
+      config: ".eslintrc.json"
+
+ratings:
+   paths:
+   - "**.js"
