update maxmind for v2 API, enable cache & watch

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
       "after": true
     }],
     "no-delete-var": 2,
+    "no-empty": ["error", { "allowEmptyCatch": true }],
     "no-label-var": 2,
     "no-shadow": 2,
     "no-unused-vars": [ 1, { "args": "none" }],
