--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haraka-plugin-geoip",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
@@ -29,13 +29,13 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
-    "eslint": "^3.7.1",
-    "eslint-plugin-haraka": "^1",
-    "haraka-test-fixtures": "^1.0.9",
-    "nodeunit": "^0.10.2"
+    "eslint": "*",
+    "eslint-plugin-haraka": "*",
+    "haraka-test-fixtures": "*",
+    "nodeunit": "*"
   },
   "dependencies": {
-    "haraka-net-utils": "^1.0.0",
+    "haraka-net-utils": "*",
     "maxmind": "^2.1.0"
   }
 }
