--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./run_tests",
+    "test": "node run_tests",
     "lint": "./node_modules/.bin/eslint index.js test/*.js",
     "coverage": "./node_modules/.bin/istanbul cover ./run_tests"
   },
