--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haraka-plugin-geoip",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "node run_tests",
     "lint": "./node_modules/.bin/eslint index.js test/*.js",
+    "lintfix": "./node_modules/.bin/eslint --fix index.js test/*.js",
     "coverage": "./node_modules/.bin/istanbul cover ./run_tests"
   },
   "repository": {
