--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -17,6 +17,7 @@ root: true
 
 rules:
   indent: [ error, 2, { SwitchCase: 1 } ]
+  no-empty: [ error, { allowEmptyCatch: true }]
 
 globals:
   OK: true
