--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npx mocha --exit",
     "lint": "npx eslint index.js test/*.js",
     "lintfix": "npx eslint --fix index.js test/*.js",
-    "coverage": "npx istanbul cover npm test"
+    "cover": "NODE_ENV=cov npx nyc --reporter=lcovonly npm run test",
+    "versions": "npx dependency-version-checker check"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,6 @@
   },
   "dependencies": {
     "haraka-net-utils": "*",
-    "maxmind": "^4.1.0"
+    "maxmind": "^4.1.4"
   }
 }
