--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "haraka-plugin-geoip-lite",
-  "version": "1.0.1",
+  "version": "1.0.14",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "./run_tests",
-    "lint": "eslint index.js",
-    "coverage": "./node_modules/.bin/istanbul cover ./run_tests"
+    "test": "npx mocha --exit",
+    "lint": "npx eslint index.js test/*.js",
+    "lintfix": "npx eslint --fix index.js test/*.js",
+    "cover": "NODE_ENV=cov npx nyc --reporter=lcovonly npm run test",
+    "versions": "npx dependency-version-checker check"
   },
   "repository": {
     "type": "git",
@@ -29,12 +31,13 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
-    "eslint": "^3.7.1",
-    "haraka-test-fixtures": "^1.0.9",
-    "nodeunit": "^0.10.2"
+    "eslint": "*",
+    "eslint-plugin-haraka": "*",
+    "haraka-test-fixtures": "*",
+    "mocha": "*"
   },
   "dependencies": {
-    "haraka-net-utils": "^1.0.0",
-    "geoip-lite": "*"
+    "geoip-lite": "*",
+    "haraka-net-utils": "*"
   }
 }
