reduce diffs between modules

--- a/config/geoip.ini
+++ b/config/geoip.ini
@@ -1,4 +1,9 @@
 
+; dbdir: the directory GeoIP DB files live in. This is only used by
+;        the maxmind geoip provider.
+;dbdir=/usr/local/share/GeoIP
+
+
 ; public_ip: the public IP address of *this* mail server
 ; if your mail server is not bound to a public IP, you'll have to provide
 ; this for distance calculations to work.
