--- a/config/geoip.ini
+++ b/config/geoip.ini
@@ -3,6 +3,7 @@
 ;        the maxmind geoip provider.
 ;dbdir=/usr/local/share/GeoIP
 
+
 ; public_ip: the public IP address of *this* mail server
 ; if your mail server is not bound to a public IP, you'll have to provide
 ; this for distance calculations to work.
@@ -22,10 +23,7 @@
 
 ; city: show city data in logs and headers
 ;    note: city data is less accurate than country
-
 city=true
 
-; show_region: show regional data (US states, CA provinces, etc..)
-;show_region=true
-
+; region: show regional data (US states, CA provinces, etc..)
 region=true
