--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "haraka-plugin-geoip",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
     "test": "test"
+  },
+  "engines": {
+    "node": ">=14"
   },
   "scripts": {
     "test": "npx mocha --exit",
@@ -31,13 +34,13 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
-    "eslint": "*",
+    "eslint": ">=8",
     "eslint-plugin-haraka": "*",
     "haraka-test-fixtures": "*",
     "mocha": "*"
   },
   "dependencies": {
-    "maxmind": "^4.1.4",
+    "maxmind": "^4.3.6",
     "haraka-net-utils": "*"
   }
 }
