--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,38 +4,10 @@ on:
   push:
     branches: [ "master", "geoip-lite" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "geoip-lite" ]
   schedule:
-    - cron: "28 18 * * 1"
+    - cron: '18 7 * * 4'
 
 jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ javascript ]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: ${{ matrix.language }}
-          queries: +security-and-quality
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:${{ matrix.language }}"
+  codeql:
+    uses: haraka/.github/.github/workflows/codeql.yml@master
