--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "test": "npx mocha --exit",
+    "test": "npx mocha",
     "lint": "npx eslint index.js test/*.js",
     "lintfix": "npx eslint --fix index.js test/*.js",
     "cover": "NODE_ENV=cov npx nyc --reporter=lcovonly npm run test",
@@ -34,13 +34,13 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
-    "eslint": ">=8",
-    "eslint-plugin-haraka": "*",
-    "haraka-test-fixtures": "*",
-    "mocha": "*"
+    "eslint": "^8.57.0",
+    "eslint-plugin-haraka": "^1.0.15",
+    "haraka-test-fixtures": "^1.3.3",
+    "mocha": "^10.4.0"
   },
   "dependencies": {
-    "maxmind": "^4.3.8",
-    "haraka-net-utils": "*"
+    "maxmind": "^4.3.18",
+    "haraka-net-utils": "^1.5.4"
   }
 }
