--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "haraka-plugin-geoip-lite",
-  "version": "1.0.14",
+  "version": "1.0.16",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "npx mocha --exit",
-    "lint": "npx eslint index.js test/*.js",
+    "test": "npx mocha@^10",
+    "lint": "npx eslint@^8 index.js test/*.js",
     "lintfix": "npx eslint --fix index.js test/*.js",
     "cover": "NODE_ENV=cov npx nyc --reporter=lcovonly npm run test",
     "versions": "npx dependency-version-checker check"
@@ -31,13 +31,11 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
-    "eslint": "*",
-    "eslint-plugin-haraka": "*",
-    "haraka-test-fixtures": "*",
-    "mocha": "*"
+    "eslint-plugin-haraka": "^1.0.15",
+    "haraka-test-fixtures": "^1.3.3"
   },
   "dependencies": {
-    "geoip-lite": "*",
-    "haraka-net-utils": "*"
+    "geoip-lite": "^1.4.10",
+    "haraka-net-utils": "^1.5.4"
   }
 }
