--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "haraka-plugin-geoip-lite",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "provide geographic information about mail senders.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "npx mocha@^10",
-    "lint": "npx eslint@^8 index.js test/*.js",
-    "lintfix": "npx eslint --fix index.js test/*.js",
     "cover": "NODE_ENV=cov npx nyc --reporter=lcovonly npm run test",
-    "versions": "npx dependency-version-checker check"
+    "format": "npm run prettier:fix && npm run lint:fix",
+    "lint": "npx eslint@^9 index.js test/*.js",
+    "lint:fix": "npx eslint@^9 --fix index.js test/*.js",
+    "prettier": "npx prettier . --check",
+    "prettier:fix": "npx prettier . --write --log-level=warn",
+    "test": "npx mocha@^11",
+    "versions": "npx dependency-version-checker check",
+    "versions:fix": "npx dependency-version-checker update"
   },
   "repository": {
     "type": "git",
@@ -31,11 +35,15 @@
   },
   "homepage": "https://github.com/haraka/haraka-plugin-geoip#readme",
   "devDependencies": {
-    "eslint-plugin-haraka": "^1.0.15",
-    "haraka-test-fixtures": "^1.3.3"
+    "haraka-test-fixtures": "^1.3.8",
+    "@haraka/eslint-config": "^2.0.2"
   },
   "dependencies": {
     "geoip-lite": "^1.4.10",
-    "haraka-net-utils": "^1.5.4"
-  }
+    "haraka-net-utils": "^1.7.1"
+  },
+  "files": [
+    "CHANGELOG.md",
+    "config"
+  ]
 }
